== 1.5.3 released 2008-10-21

* Removed ilike conditions and let the like condition determine if it should use like or ilike depending on the connection adapter.
* Fixed bug where the keywords condition was removing foreign characters.

== 1.5.2 released 2008-10-21

* Added ilike conditions
* Removed configatron dependency (was accidentally added)

== 1.5.1 released 2008-10-20

* Fixed bug with per_page_links
* Added "ordering_by" class for per_page_links

== 1.5.0 released 2008-10-20

* Merge array of conditions with or or and where it makes sense. Begins with condition does not make sense to join with and, so instead join with or.
* Cleaned up html validity so it will pass W3C validators
* Restructure configuration to be more organized and allow for more configuration options.
* Added more configuration options, especially for class names.

== 1.4.1 released 2008-10-15

* Extracted english text into configuration to support alternate languages. I18n support.
* Improved method detection in add_joins to use respond_to? with the private method option set to true

== 1.4.0 released 2008-10-15

* Fixed bug when duping or cloning to copy over instance vars instead of method values
* Fixed bug with older versions of ActiveRecord and creating an alias method chain on find in AssociationCollection
* Added modifiers: upper, lower, trim, ltrim, rtrim
* Added not_nil and not_blank conditions
* Modified conditions so that table name is a variable, this allows table name to be switched on the fly.
* Modified auto joins to return symbols instead of SQL. This allows AR to properly merge the joins and ultimately result in proper SQL when performing multiple complex scopes.
* Fixed conflicts between includes and joins, duplicate joins are not added. Includes are prioritized. This also makes ActiveRecord much more flexible. Now you can cherry pick included associations. And not have to worry about conflicting with joins.