@@ -90,12 +90,12 @@ module Searchgasm
               if !search_options[:hidden_fields].blank?
                 options[:html][:onsubmit] ||= ""
                 options[:html][:onsubmit] += ";"
-              
-                javascript = "if(typeof(Prototype) != 'undefined') {"
-                search_options[:hidden_fields].each { |field| javascript += "field = $('#{name}_#{field}'); if(field) { $('#{name}_#{field}_hidden').value = field.value; }" }
-                javascript += "} else if(typeof(jQuery) != 'undefined') {"
-                search_options[:hidden_fields].each { |field| javascript += "field = $('##{name}_#{field}'); if(field) { $('##{name}_#{field}_hidden').val(field.val()); }" }
-                javascript += "}"
+                
+                javascript = "if(typeof(Prototype) != 'undefined') {" if Config.helpers.javascript_library.blank?
+                search_options[:hidden_fields].each { |field| javascript += "field = $('#{name}_#{field}'); if(field) { $('#{name}_#{field}_hidden').value = field.value; }" } if Config.helpers.javascript_library.blank? || Config.helpers.javascript_library == :prototype
+                javascript += "} else if(typeof(jQuery) != 'undefined') {" if Config.helpers.javascript_library.blank?
+                search_options[:hidden_fields].each { |field| javascript += "field = $('##{name}_#{field}'); if(field) { $('##{name}_#{field}_hidden').val(field.val()); }" } if Config.helpers.javascript_library.blank? || Config.helpers.javascript_library == :jquery
+                javascript += "}" if Config.helpers.javascript_library.blank?
               
                 options[:html][:onsubmit] += javascript
               end
